--- a/movie_app/index.html
+++ b/movie_app/index.html
@@ -103,7 +103,7 @@
     }
     .add-movie-form button {
       background-color: #333;
-      color: #fff;
+      color: #867f7f;
       border: none;
       border-radius: 5px;
       padding: 5px 10px;
@@ -113,12 +113,12 @@
 </head>
 <body>
   <div class="header">
-    <h1>Minha Aplicação de Streaming</h1>
+    <h1>Minha APP de Streaming</h1>
   </div>
 
   <div class="sorting-buttons">
-    <button onclick="sortMoviesAlphabetically()">Ordenar por Nome</button>
-    <button onclick="sortMoviesByYear()">Ordenar por Ano</button>
+    <button onclick="sortMoviesAlphabetically()">Ordenar por Titulo</button>
+    <button onclick="sortMoviesByYear()">Ordenar por Ano de Lançamento </button>
   </div>
 
   <div class="add-movie-form">
@@ -130,13 +130,13 @@
 
   <div class="content">
     <div class="movie">
-      <img src="filme1.jpg" alt="Filme 1" data-release-year="2015">
+      <img src="filme1.jpg" alt="Filme 1" data-release-year="2003">
       <h3>The Heart of the Sea</h3>
       <p>2015</p>
       <a href="https://www.youtube.com/watch?v=K-H35Mpj4uk" target="_blank">Assistir Trailer</a>
     </div>
     <div class="movie">
-      <img src="filme3.jpg" alt="Filme 2" data-release-year="2018">
+      <img src="filme3.jpg" alt="Filme 2" data-release-year="2016">
       <h3>GreenBook</h3>
       <p>2018</p>
       <a href="https://www.youtube.com/watch?v=QkZxoko_HC0" target="_blank">Assistir Trailer</a>
